RESOLVED FIXED147765
CSSSegmentedFontFace::fontRanges() does not handle duplicate fonts correctly
https://bugs.webkit.org/show_bug.cgi?id=147765
Summary CSSSegmentedFontFace::fontRanges() does not handle duplicate fonts correctly
Myles C. Maxfield
Reported 2015-08-06 20:11:41 PDT
CSSSegmentedFontFace::fontRanges() does not handle duplicate fonts correctly
Attachments
Patch (4.89 KB, patch)
2015-08-06 20:16 PDT, Myles C. Maxfield
fpizlo: review+
Myles C. Maxfield
Comment 1 2015-08-06 20:16:03 PDT
Myles C. Maxfield
Comment 2 2015-08-06 21:21:15 PDT
Note You need to log in before you can comment on or make changes to this bug.